<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="visible">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayoutSettingsMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ColorPrimaryDark"
            android:text="@string/settings_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/table_borders"
            android:padding="@dimen/textview_padding" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/merchant_id"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/merchant_id"/>
                <EditText
                    android:id="@+id/merchant_id_data"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:hint="@string/merchant_id_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/pinpad_ip"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/pinpad_ip"/>
                <EditText
                    android:id="@+id/pinpad_ip_data"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:hint="@string/pinpad_ip_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/processor_type_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/processor_type"/>
                <Spinner
                    android:id="@+id/processor_type"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:entries="@array/processor_type_array"
                    android:padding="@dimen/textview_padding"
                    android:prompt="@string/debit_credit_prompt"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/transaction_type_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/transaction_type_check"/>
                <Spinner
                    android:id="@+id/transaction_type"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:entries="@array/debit_credit_array"
                    android:padding="@dimen/textview_padding"
                    android:prompt="@string/debit_credit_prompt"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/transaction_name_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/transaction_name"/>
                <Spinner
                    android:id="@+id/transaction_name"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:entries="@array/transactions_arrays"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/tip_threshold_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/tip_threshold"/>
                <EditText
                    android:id="@+id/tip_threshold"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="numberDecimal"
                    android:digits="0123456789"
                    android:hint="@string/tip_threshold_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/company_email_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/company_email"/>
                <EditText
                    android:id="@+id/company_email"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="textEmailAddress"
                    android:hint="@string/company_email_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/company_pass_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/BorderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/company_pass"/>
                <EditText
                    android:id="@+id/company_pass"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="textPassword"
                    android:hint="@string/company_pass_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/ping_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:padding="@dimen/button_padding"
                android:text="@string/ping_text"
                android:textColor="@android:color/white" />
            <EditText
                android:id="@+id/ping_data"
                android:layout_width="@dimen/border_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/table_borders_edit"
                android:textSize="@dimen/textview_padding"
                android:gravity="center"
                android:text="@string/ping_result"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/checkbox_text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/button_grey"
                android:padding="@dimen/button_padding"
                android:layout_marginEnd="@dimen/button_padding"
                android:text="@string/cancel_text"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green"
                android:padding="@dimen/button_padding"
                android:layout_marginStart="@dimen/button_padding"
                android:text="@string/save_text"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
